增加自定义圆环动画

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".CustomFirst" />
         <activity android:name=".Rainbow" />
+        <activity android:name=".NumberProgressBarActivity" />
     </application>
 
 </manifest>
